# horizon-overlay-open-source-cluely

./: CMakeLists.txt  Package.swift  README.md
Constella Horizon/: ConstellaHorizonApp.swift
Constella Horizon/AI/: AIContextManager.swift
Constella Horizon/Auth/: AuthManager.swift
Constella Horizon/InputEvent/Windows/: InputEventManagerWin32.cpp
Constella Horizon/Settings/: SettingsView.swift
Constella Horizon/Setup/: FloatingOnboardingTemplate.swift  PermissionManager.swift
Constella Horizon/SystemMenu/: SystemMenuManager.swift
Constella Horizon/Utility/: PlatformUtils.swift
Constella Horizon/Windows/: QuickCaptureWindowWin.swift  WinSparkleManager.swift
